# tmup

./: .gitignore  AGENTS.md  Cargo.toml  README.md  lazytmux-design-v5-implementation.md  lazytmux-design-v5.md  prek.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: prek.yml
docs/: design.md
docs/plans/: 2026-04-08-progress-manual-checklist.md
examples/: lazy.kdl  tmup.kdl
src/: config.rs  config_mode.rs  config_tpm.rs  git.rs  lib.rs  loader.rs  lockfile.rs  main.rs  model.rs  planner.rs  plugin.rs  prepare.rs  progress.rs  repo.rs  state.rs  sync.rs  termui.rs  tmux.rs
src/progress/: catalog.rs  live.rs  log.rs  mod.rs  model.rs  reducer.rs  render.rs  reporter.rs
src/ui/: detail.rs  mod.rs  plugin_list.rs  progress.rs
tests/: cli_help.rs  cli_list.rs  cli_paths.rs  cli_sync.rs  cli_targeted_ops.rs  config_mode.rs  config_mode_cli.rs  config_parse.rs  config_tpm.rs  example_config.rs  init_flow.rs  loader.rs  lockfile.rs  operations.rs  planner.rs  progress_outcomes.rs  progress_regressions.rs  publish.rs  repo_cache.rs  repo_prepare.rs  restore.rs  source_normalization.rs  state.rs  sync.rs  sync_fingerprint.rs  tmux.rs  ui_smoke.rs  utils.rs
