[package]
name = "lazytmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
etcetera = "0.11"
fd-lock = "4"
kdl = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shellexpand = "3.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
