[package]
name = "tmup"
version = "0.1.0"
edition = "2024"

[dependencies]
anstream = "1"
base16ct = { version = "0.2", features = ["alloc"] }
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
fd-lock = "4"
kdl = "6"
owo-colors = "4.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shellexpand = "3.1"
tabled = { version = "0.20", default-features = false, features = ["std", "ansi"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["time"] }
